# object-detection

./: CMakeLists.txt  README.md  main.cpp  main.hpp  window_stream.cpp  window_stream.hpp
.github/workflows/: build.yml
lib/: classifier.cpp  classifier.hpp  detection.cpp  detection.hpp  integral_image.cpp  integral_image.hpp  training.cpp  training.hpp
tests/: test_integral_image.cpp  test_lib.cpp
